# Carnival

./: .env  .gitignore  Cargo.toml  LICENSE.md  README.md  action_chains.toml  config.toml  notes.md
.github/workflows/: rust.yml
.sqlx/: query-c629bff0e90ed2a6b722dec5233af9063a04cfd72743ed0dfeb1aca0aa146c46.json  query-e0fd0f1ab705bcada41a560f50a9ca41c64672db6a4c2008112cae2ee8fec2ae.json
carnival-htmx/: index.html  main.css
carnival-matchserver/: Cargo.toml  action_chains.json  action_chains.toml
carnival-matchserver/src/: config.rs  connection.rs  input.rs  main.rs
carnival-matchserver/src/commons/: types.rs
carnival-matchserver/src/league/: league_client.rs  mod.rs
carnival-matchserver/src/overwatch/: actions.rs  client_state.rs  dontlookblizzard.rs  dyn_actions.rs  game_state.rs  map.rs  mod.rs  state_handler.rs  static_actions.rs
carnival-matchserver/tooling/mousepos/: Cargo.toml  dub.json
carnival-matchserver/tooling/mousepos/src/: main.rs
carnival-web/: Cargo.toml  db-carnival-dev.db  db-carnival-dev.db-shm  db-carnival-dev.db-wal
carnival-web/.sqlx/: query-15fc177e3fe0051371c8f8048222de45f133bd9c73958dcfd9934f021b6a665f.json  query-2e1726ab70d6eda5db3b5bef29780322cccd46bbef1d34cf82fad59f3b72a37d.json  query-4edf7b541fe2e683543faba937ef33abaf8a3425fc1f7174bfbe4c793d64af4c.json  query-74ce9b2c9eca3792e0d733056f502aa8984e0c826ba2f92b15ad5716e7be184b.json  query-7c63b2bdcefed0c1366fd75ffa43cd79b6334ac2eb1186d75ca11b673f3b01d9.json  query-92ccf3b9db8578be6343a96f205b1d7c386f2c8dfdc3f662a465fa223931d6d3.json  query-9aa12a0bc0f4f2a941834da6019fda6de92d2b00e3e4b981cd1664493e683736.json
carnival-web/html/: leaderboard.html  profile.html  queue_button_notqueued.html  queue_user_panel.html
carnival-web/js/: header_domino.js  redirect_login.js  table_domino.js
carnival-web/setup/: apply_schema.sql  database_inator.sh  insert_bracket.sql  insert_bracket_key.sql  insert_test_queue.sql  insert_test_user.sql  powershell_database_inator.ps1
carnival-web/sql/: bracket_by_key.sql  bracket_has_key.sql  delete_queued_player.sql  does_bracket_key_exist.sql  get_pending_match.sql  insert_bracket.sql  insert_bracket_key.sql  insert_queue.sql  insert_queued_player.sql  insert_user.sql  insert_user_into_bracket.sql  is_queued.sql  order_users_rating.sql  players_by_team_match.sql  resolve_match.sql  resolve_queue.sql  set_match_status.sql  settings_user_update.sql  user_by_token.sql
carnival-web/src/: main.rs
carnival-web/src/api/: endpoints.rs  mod.rs  payloads.rs
carnival-web/src/commserver/: server.rs
carnival-web/src/db/: mod.rs  models.rs  queries.rs  service.rs
carnival-web/src/db/services/: bracket.rs  mod.rs  overwatch_match.rs  password_reset_token.rs  queue.rs  session_token.rs  user.rs
carnival-web/src/rendering/: components.rs  mod.rs  routes.rs
carnival-web/static/html/: base.html  leaderboard.html  login.html  queue.html  queue_button_queued.html  register.html  settings_user.html
carnival-web/static/js/: redirect_register.js  table_domino.js
carnival-web/testing/: dummy_data.py
carnival-web/testing/endpoints/: users.py
carnival-web/testing/ws/: client.py
matchserver/: state_handler.json  state_handler.toml
matchserver/src/: input.rs  main.rs
matchserver/src/overwatch/: actions.rs  mod.rs  state_handler.rs
matchserver/tooling/mousepos/: .gitignore
migrations/: 20231005152857_setup.sql  20231005164015_test_data.sql
src/: config.rs  input.rs  main.rs
src/overwatch/: actions.rs  client_state.rs  game_state.rs  mod.rs  state_handler.rs
testing/endpoints/: users.py
tooling/mousepos/source/: app.d
web/: Cargo.toml
web/src/: main.rs
web/src/api/: endpoints.rs  payloads.rs
web/src/db/: mod.rs  models.rs  queries.rs  service.rs
