[package]
name = "carnival"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
image = "0.24.7"
imageproc = "0.23.0"
obws = "0.11.5"
rusty-tesseract = "1.1.7"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
system-extensions = { version = "0.0.4", features = ["dialogues"] }
tokio = { version = "1.32.0", features = ["full"] }
winapi = { version = "0.3.9", features = ["winuser"] }
winput = "0.2.5"
