[package]
name = "carnival"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
image = "0.24.7"
imageproc = "0.23.0"
obws = "0.11.5"
rusty-tesseract = "1.1.7"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
system-extensions = { version = "0.0.4", features = ["dialogues"] }
tokio = { version = "1.32.0", features = ["full"] }
winput = "0.2.5"
windows = { version = "0.51.1", features = [
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Foundation"
    ]}
toml = "0.8.0"
color-eyre = "0.6.2"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"