[package]
name = "carnival-matchserver"
version = "0.1.0"
edition = "2021"

# If you're not working on anything related to the game's memory,
# it'd be wise to set this back to 0.
# Otherwise, you want this at 3.
# [profile.dev]
# opt-level = 3
# lto = true

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.51.1", features = [
        "Win32_UI_WindowsAndMessaging", 
        "Win32_Foundation",
        "Win32_Security",
        "Win32_System_Memory",
        "Win32_System_Threading",
        "Win32_System_Diagnostics_Debug"
    ]}
anyhow = "1.0.75"
base64 = "0.21.4"
image = "0.24.7"
# imageproc = "0.23.0"
# obws = "0.11.5"
# rusty-tesseract = "1.1.7"
serde = { version = "1.0.188", features = ["derive"] }
system-extensions = { version = "0.0.4", features = ["dialogues"] }
tokio = { version = "1.32.0", features = ["rt", "full"] }
winput = "0.2.5"
toml = "0.8.0"
color-eyre = "0.6.2"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
log = "0.4.20"
serde_json = "1.0.107"
futures = "0.3.28"
tungstenite = { version = "0.20.1", features = ["native-tls"] }
url = "2.4.1"
