[package]
name = "carnival-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
axum-macros = "0.3.8"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
easy_password = "0.1.4"
http = "0.2.9"
rand = {version = "0.8.5", features = ["std_rng"]}
serde = "1.0.188"
serde_json = "1.0.107"
sqlx = {version = "0.7.1", features = ["sqlite", "runtime-tokio"]}
tokio = {version = "1.32.0", features = ["full"]}
tower = {version = "0.4.13", features=["full"]}
tower-http = {version = "0.4.4", features=["full"]}
