[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
axum-client-ip = "0.4.2"
easy_password = "0.1.4"
serde = "1.0.188"
serde_json = "1.0.107"
sqlx = {version = "0.7.1", features = ["sqlite", "runtime-tokio"]}
tokio = {version = "1.32.0", features = ["full"]}
